# 3dEngine-

./: settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLUtils.cpp  GLUtils.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  MatCapTexture.cpp  MatCapTexture.h  Math.h  Mesh.cpp  Mesh.h  Shaders.h  native-lib.cpp
app/src/main/java/com/example/modelinengine/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
